--- a/res/values-qu-rEC/strings.xml
+++ b/res/values-qu-rEC/strings.xml
@@ -483,6 +483,7 @@ riksichinami kanki
   <string name="RegistrationActivity_call">Kayachina</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Kikinpa mushukyachishka shuyu mana allichirirka.</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Mana maskakukta tarirkanchikchu \'%s\'</string>
   <string name="SearchFragment_header_conversations">Rimarikuna</string>
@@ -593,6 +594,8 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <string name="MessageNotifier_mark_read">Killkakatishkami nishpa unanchay</string>
   <string name="MessageNotifier_media_message">Multimedia chaski</string>
   <string name="MessageNotifier_reply">Kutichina</string>
+  <string name="MessageNotifier_signal_message">Signal chaski</string>
+  <string name="MessageNotifier_unsecured_sms">Kay killkaska SMS mana pakallachu</string>
   <string name="MessageNotifier_pending_signal_messages">Signal chaskikuna shuyanakun</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Signal chaskikuna shuyanakukta charinki, paskankapak uryakuchinkapakpash llapipay</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
