--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -542,6 +542,7 @@
   <string name="RegistrationActivity_call">اتصل</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">تعذر حفظ التغييرات بالصورة</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">لم يتم العثور على أية نتيجة لـ \'%s\'</string>
   <string name="SearchFragment_header_conversations">المحادثات</string>
@@ -650,6 +651,8 @@
   <string name="MessageNotifier_mark_read">اعتبرها مقروءة</string>
   <string name="MessageNotifier_media_message">رسالة وسائط متعددة</string>
   <string name="MessageNotifier_reply">رَدّ</string>
+  <string name="MessageNotifier_signal_message">رسالة Signal</string>
+  <string name="MessageNotifier_unsecured_sms">رسائل نصية غير آمنة</string>
   <string name="MessageNotifier_pending_signal_messages">رسائل Signal المعلقة</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">متصل</string>
