--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -576,6 +576,7 @@ telefonní číslo</string>
   <string name="RegistrationActivity_call">Volat</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nepodařilo se uložit změny v obrázku.</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Pro \'%s\' nebylo nic nalezeno</string>
   <string name="SearchFragment_header_conversations">Konverzace</string>
@@ -684,6 +685,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="MessageNotifier_mark_read">Označit jako přečtené</string>
   <string name="MessageNotifier_media_message">Multimediální zpráva</string>
   <string name="MessageNotifier_reply">Odpověď</string>
+  <string name="MessageNotifier_signal_message">Zpráva Signal</string>
+  <string name="MessageNotifier_unsecured_sms">Nezabezpečená SMS</string>
   <string name="MessageNotifier_pending_signal_messages">Nevyřízené zprávy Signal</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Máte nevyřízené zprávy Signal, klepnutím je otevřete a načtete.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
