--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -579,6 +579,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="RegistrationActivity_call">Galw</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Methu cadw newidiadau i ddelweddau</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Dim canlyniadau ar gyfer \'%s\'</string>
   <string name="SearchFragment_header_conversations">Sgyrsiau</string>
@@ -688,6 +689,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="MessageNotifier_mark_read">Marcio wedi\'i ddarllen</string>
   <string name="MessageNotifier_media_message">Neges cyfryngau</string>
   <string name="MessageNotifier_reply">Ymateb</string>
+  <string name="MessageNotifier_signal_message">Neges Signal</string>
+  <string name="MessageNotifier_unsecured_sms">SMS anniogel</string>
   <string name="MessageNotifier_pending_signal_messages">Negeseuon Signal yn aros</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Mae gennych negeseuon Signal yn aros, tapiwch i\'w hagor ac adfer</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
