--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -541,6 +541,7 @@ número de teléfono
   <string name="RegistrationActivity_call">Llamada</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Fallo al guardar los cambios de la imagen</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">No se encontraron resultados para «%s»</string>
   <string name="SearchFragment_header_conversations">Chats</string>
@@ -652,6 +653,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MessageNotifier_mark_read">Marcar como leído</string>
   <string name="MessageNotifier_media_message">Mensaje multimedia</string>
   <string name="MessageNotifier_reply">Responder</string>
+  <string name="MessageNotifier_signal_message">Mensaje de Signal</string>
+  <string name="MessageNotifier_unsecured_sms">SMS no cifrado</string>
   <string name="MessageNotifier_pending_signal_messages">Mensajes de Signal pendientes</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Tienes mensajes de Signal pendientes, toca para abrir y descargar</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
