--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -457,6 +457,7 @@ a shonrú</string>
   <string name="RegistrationActivity_continue">Lean ar aghaidh</string>
   <string name="RegistrationActivity_call">Glao</string>
   <!--ScribbleActivity-->
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Níor aimsíodh aon torthaí le haghaidh \'%s\'</string>
   <string name="SearchFragment_header_conversations">Comhráite</string>
@@ -556,6 +557,8 @@ a shonrú</string>
   <string name="MessageNotifier_mark_read">Rianaigh mar léite</string>
   <string name="MessageNotifier_media_message">Teachtaireacht mheán</string>
   <string name="MessageNotifier_reply">Freagair</string>
+  <string name="MessageNotifier_signal_message">Teachtaireacht Signal</string>
+  <string name="MessageNotifier_unsecured_sms">SMS nach bhfuil slán</string>
   <string name="MessageNotifier_pending_signal_messages">Ar feitheamh ar teachtaireachtaí Signal</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Tá teachtaireachtaí Signal ar feitheamh agat, cnag chun iad a oscailt agus a athfháil.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
