--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -514,6 +514,7 @@ isikan (%s) tidak tepat.
   <string name="RegistrationActivity_call">Panggil</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Gagal menyimpan perubahan gambar.</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Tidak ditemukan hasil untuk \'%s\'</string>
   <string name="SearchFragment_header_conversations">Percakapan</string>
@@ -624,6 +625,8 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="MessageNotifier_mark_read">Tandai sudah dibaca</string>
   <string name="MessageNotifier_media_message">Pesan media</string>
   <string name="MessageNotifier_reply">Balas</string>
+  <string name="MessageNotifier_signal_message">Pesan Signal</string>
+  <string name="MessageNotifier_unsecured_sms">Kirim SMS tidak aman</string>
   <string name="MessageNotifier_pending_signal_messages">Pesan Signal tertunda</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Anda memiliki pesan Signal yang tertunda, ketuk untuk membuka dan menerima</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
