--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -514,6 +514,7 @@
   <string name="RegistrationActivity_call">通話</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">画像の変更を保存できませんでした</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">「%s」に一致する情報は見つかりませんでした。</string>
   <string name="SearchFragment_header_conversations">会話</string>
@@ -621,6 +622,8 @@
   <string name="MessageNotifier_mark_read">既読にする</string>
   <string name="MessageNotifier_media_message">メディアメッセージ</string>
   <string name="MessageNotifier_reply">返信</string>
+  <string name="MessageNotifier_signal_message">Signalメッセージ</string>
+  <string name="MessageNotifier_unsecured_sms">安全でないSMS</string>
   <string name="MessageNotifier_pending_signal_messages">保留中のメッセージ</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">保留中のメッセージがあります。取得するにはタップしてください。</string>
   <string name="MessageNotifier_contact_message">%2$s%1$s</string>
