--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -510,6 +510,7 @@
   <string name="RegistrationActivity_call">Gazî</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Guhertinên weneyê nehate tomarkirin</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Ji bo \'%s\' ti encam nehatin peydakirin</string>
   <string name="SearchFragment_header_conversations">Gotûbêj</string>
@@ -621,6 +622,8 @@
   <string name="MessageNotifier_mark_read">Xwendî nîşan bike</string>
   <string name="MessageNotifier_media_message">Peyama medya</string>
   <string name="MessageNotifier_reply">Bersiv bide</string>
+  <string name="MessageNotifier_signal_message">Peyama Signalê</string>
+  <string name="MessageNotifier_unsecured_sms">SMSa neewledar</string>
   <string name="MessageNotifier_pending_signal_messages">Peyamên hilawistî yên Signalê </string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Peyamên hilawistî yên Signalê hene, ji bo vekî û werbigirî bitepîne</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
