--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -537,6 +537,7 @@ angav (%s) är ogiltigt.</string>
   <string name="RegistrationActivity_call">Ring</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Misslyckades med att spara bildändringar</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Inga resultat hittades för \'%s\'</string>
   <string name="SearchFragment_header_conversations">Konversationer</string>
@@ -646,6 +647,8 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="MessageNotifier_mark_read">Läst</string>
   <string name="MessageNotifier_media_message">Mediameddelande</string>
   <string name="MessageNotifier_reply">Svara</string>
+  <string name="MessageNotifier_signal_message">Signal-meddelande</string>
+  <string name="MessageNotifier_unsecured_sms">Osäkert SMS</string>
   <string name="MessageNotifier_pending_signal_messages">Väntande Signal-meddelanden</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Du har väntande Signal-meddelanden, tryck för att öppna och hämta</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
