--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -470,6 +470,7 @@
   <string name="RegistrationActivity_call">โทร</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">บันทึกการเปลี่ยนแปลงของภาพล้มเหลว</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">ไม่พบข้อมูลเกี่ยวกับ \'%s\'</string>
   <string name="SearchFragment_header_conversations">การสนทนา</string>
@@ -581,6 +582,8 @@
   <string name="MessageNotifier_mark_read">ทำเครื่องหมายว่าอ่านแล้ว</string>
   <string name="MessageNotifier_media_message">ข้อความสื่อ</string>
   <string name="MessageNotifier_reply">ตอบกลับ</string>
+  <string name="MessageNotifier_signal_message">ข้อความ Signal</string>
+  <string name="MessageNotifier_unsecured_sms">SMS ที่ไม่ปลอดภัย</string>
   <string name="MessageNotifier_pending_signal_messages">ข้อความ Signal ที่รอดำเนินการ</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">คุณมีข้อความ Signal ที่รอดำเนินการอยู่ แตะเพื่อเปิดและดึงข้อความ</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
