--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -554,6 +554,7 @@
   <string name="RegistrationActivity_call">Виклик</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Не вдалось змінити зображення</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Не знайдено результатів для \'%s\'</string>
   <string name="SearchFragment_header_conversations">Розмови</string>
@@ -664,6 +665,8 @@
   <string name="MessageNotifier_mark_read">Позначити як прочитане</string>
   <string name="MessageNotifier_media_message">Медіа повідомлення</string>
   <string name="MessageNotifier_reply">Відповісти</string>
+  <string name="MessageNotifier_signal_message">Повідомлення Signal</string>
+  <string name="MessageNotifier_unsecured_sms">Незахищене SMS</string>
   <string name="MessageNotifier_pending_signal_messages">Повідомлення в очікуванні</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">У вас є повідомлення в очікуванні, торкніться щоб отримати їх</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
