--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -518,6 +518,7 @@
   <string name="RegistrationActivity_call">拨号</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">无法保存图像更改</string>
+  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">没有找到关于“%s”的信息</string>
   <string name="SearchFragment_header_conversations">对话</string>
@@ -626,6 +627,8 @@
   <string name="MessageNotifier_mark_read">标记为已读</string>
   <string name="MessageNotifier_media_message">媒体信息</string>
   <string name="MessageNotifier_reply">回复</string>
+  <string name="MessageNotifier_signal_message">Signal 消息</string>
+  <string name="MessageNotifier_unsecured_sms">未加密的短信</string>
   <string name="MessageNotifier_pending_signal_messages"> Signal 信息待处理</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">您有待处理的信号消息，轻触来打开和收取</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
@@ -714,6 +717,7 @@
   <string name="conversation_activity__type_message_sms_insecure">未加密的短信</string>
   <string name="conversation_activity__type_message_mms_insecure">未加密的彩信</string>
   <string name="conversation_activity__from_sim_name">来自 %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">发送</string>
   <string name="conversation_activity__compose_description">编写信息</string>
   <string name="conversation_activity__emoji_toggle_description">切换表情键盘</string>
@@ -963,6 +967,7 @@
   <string name="preferences__pref_enter_sends_title">按下回车键发送</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">按下回车键将会发送短信息</string>
   <string name="preferences__send_link_previews">发送链接预览</string>
+  <string name="preferences__previews_are_supported_for">预览现支持Imgur, Instagram, Pinterest, Reddit, 以及YouTube链接</string>
   <string name="preferences__choose_identity">选择身份</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">从联系人列表选择您的联系人条目。</string>
   <string name="preferences__change_passphrase"> 修改密码</string>
