--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -396,6 +396,7 @@
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Изпрати на %s</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Натиснете, за да изберете</string>
   <!--MediaSendActivity-->
   <string name="MediaSendActivity_add_a_caption">Добави надпис...</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Един елемент бе премахнат, защото надхвърля ограничението за размер</string>
@@ -536,7 +537,6 @@
   <string name="RegistrationActivity_call">Обаждане</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Неуспешнп запазване на промененото изображение</string>
-  <string name="ImageEditorFragment_initial_text">Signal</string>
   <!--Search-->
   <string name="SearchFragment_no_results">Не са открити резултати за \'%s\'</string>
   <string name="SearchFragment_header_conversations">Чатове</string>
@@ -738,6 +738,7 @@
   <string name="conversation_activity__type_message_sms_insecure">Некриптиран SMS</string>
   <string name="conversation_activity__type_message_mms_insecure">Некриптиран MMS</string>
   <string name="conversation_activity__from_sim_name">От %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Изпращане</string>
   <string name="conversation_activity__compose_description">Създаване на съобщение</string>
   <string name="conversation_activity__emoji_toggle_description">Смени emoji клавиатурата</string>
@@ -991,6 +992,7 @@
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_multimedia_messages">Използване на Signal за всички входящи мултимедийни съобщения</string>
   <string name="preferences__pref_enter_sends_title">Клавишът Enter се използва за изпращане</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Натискане на клавиша Enter ще изпрати текстово съобщене</string>
+  <string name="preferences__send_link_previews">Изпращане на визуализации на връзката</string>
   <string name="preferences__previews_are_supported_for">Визуализации са поддържани за линкове към Imgur, Instagram, Pinterest, Reddit, и YouTube.</string>
   <string name="preferences__choose_identity">Избери самоличност</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Изберете контакт от списъка с контакти.</string>
